# Pastry

./: .gitignore  Dockerfile  INSTRUCTIONS.md  LICENSE.md  README.md  benchmark.sh  build_artifacts.sh  exec.sh  gen_csv.sh  merge_table.py  pastry.py  pastry_core.py  pyproject.toml  requirements.txt  run.py  run.sh  test.py  timings.csv
absynth/: README  gsl_caller  runall.sh
absynth/examples/: complex.imp  no_loop.imp  prnes.imp  prseq.imp  prspeed.imp  race.imp  rdwalk.imp  simple_recursive.imp  trader.imp  trapped_miner.imp
absynth/linear/: 2drwalk.imp  C4B_t09.imp  C4B_t13.imp  C4B_t15.imp  C4B_t19.imp  C4B_t30.imp  C4B_t61.imp  bayesian_network.imp  ber.imp  bin.imp  condand.imp  cooling.imp  coupon.imp  cowboy_duel.imp  cowboy_duel_3way.imp  fcall.imp  filling_vol.imp  geo.imp  hyper.imp  no_loop.imp  prnes.imp  prspeed.imp  rdseql.imp  rdwalk.imp  rejection_sampling.imp  rfind_lv.imp  rfind_mc.imp  robot.imp  roulette.imp  trapped_miner.imp
absynth/polynomial/: complex.imp  multirace.imp  pol04.imp  pol05.imp  pol06.imp  (+4 more)
benchmarks/: 2d_bounded_rw.imp  Knuth-Yao_dice.imp  ast_loop.imp  ast_rw.imp  asymmetric_rw1.imp  asymmetric_rw2.imp  biased_rw4.imp  binomial2.imp  brp_protocol.imp  catmouse.imp  complex_roots.imp  counterex1b.imp  cousot9.imp  dir_term.imp  geometric.imp  high_multiplicity.imp  insertsort.imp  irr_runtime.imp  neg_binomial.imp  nestedLoop.imp  speedpldi2.imp  speedpldi3.imp  speedpldi4.imp  tortoise_hare.imp  tortoise_hare_dt.imp  tortoise_hare_un.imp  zeroconf.imp
pastry/: batch_test.sh  benchmark.sh  pastry.py  pyproject.toml  run.sh
(+148 files in other folders)
